--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
@@ -114,6 +114,12 @@
     <ClInclude Include="Control.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Dialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AboutDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
