--- a/windows/Editor/kEditor/app.config
+++ b/windows/Editor/kEditor/app.config
@@ -8,7 +8,7 @@
   <userSettings>
     <kEditor.Properties.Settings>
       <setting name="RecentFiles" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="DefaultFontName" serializeAs="String">
         <value>Tahmoa</value>
@@ -65,8 +65,8 @@
         <value>False</value>
       </setting>
       <setting name="LastTabs" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </kEditor.Properties.Settings>
   </userSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
