--- a/windows/Editor/kEditor/Properties/Settings.settings
+++ b/windows/Editor/kEditor/Properties/Settings.settings
@@ -15,37 +15,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="StyleConfig" Type="System.String" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;Styles&gt;
-  &lt;Style index="1" fontName="Segoe UI" fontSize="8"
-  foreColor="FF2D2DFF" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-  &lt;Style index="4" fontName="Segoe UI" fontSize="8"
-  foreColor="FF2D2DFF" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-  &lt;Style index="5" fontName="Verdana" fontSize="8"
-  foreColor="FF1E90FF" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-  &lt;Style index="6" fontName="Verdana" fontSize="8"
-  foreColor="FFFF7F50" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-  &lt;Style index="7" fontName="Arial" fontSize="8" foreColor="C4"
-  backColor="FFFFFFFF" bold="False" italic="False" /&gt;
-  &lt;Style index="8" fontName="Arial" fontSize="8" foreColor="C4"
-  backColor="FFFFFFFF" bold="False" italic="True" /&gt;
-  &lt;Style index="11" fontName="Verdana" fontSize="8"
-  foreColor="80C0" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-  &lt;Style index="12" fontName="Verdana" fontSize="8"
-  foreColor="FF008000" backColor="FFFFFFFF" bold="False"
-  italic="True" /&gt;
-  &lt;Style index="13" fontName="Verdana" fontSize="8"
-  foreColor="FF008000" backColor="FFFFFFFF" bold="False"
-  italic="True" /&gt;
-  &lt;Style index="15" fontName="Verdana" fontSize="8"
-  foreColor="FF8000" backColor="FFFFFFFF" bold="False"
-  italic="False" /&gt;
-&lt;/Styles&gt;</Value>
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;&lt;Styles&gt;&lt;Style index="6" fontName="Consolas" fontSize="9.75" foreColor="FF0000DF" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;Style index="8" fontName="Consolas" fontSize="9.75" foreColor="C4" backColor="FFFFFFFF" bold="False" italic="True" /&gt;&lt;Style index="7" fontName="Consolas" fontSize="9.75" foreColor="FF800080" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;Style index="1" fontName="Consolas" fontSize="9.75" foreColor="FF0080C0" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;Style index="9" fontName="Consolas" fontSize="9.75" foreColor="FFFF0080" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;Style index="11" fontName="Consolas" fontSize="9.75" foreColor="80C0" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;Style index="10" fontName="Consolas" fontSize="9.75" foreColor="FF008080" backColor="FFFFFFFF" bold="True" italic="False" /&gt;&lt;Style index="5" fontName="Consolas" fontSize="9.75" foreColor="FF606060" backColor="FFFFFFFF" bold="False" italic="True" /&gt;&lt;Style index="4" fontName="Consolas" fontSize="9.75" foreColor="FF008000" backColor="FFFFFFFF" bold="False" italic="False" /&gt;&lt;/Styles&gt;</Value>
     </Setting>
     <Setting Name="LineNumber" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
