update macos package makefile

--- a/macOS/package/Makefile
+++ b/macOS/package/Makefile
@@ -2,7 +2,12 @@ IDENTITY_APP = "Developer ID Application: H T KHIN ZAW (YQ4W4QMX9D)"
 IDENTITY_INSTALLER = "Developer ID Installer: H T KHIN ZAW (YQ4W4QMX9D)"
 ROOT_DIR = "/tmp/KeyMagic.dst"
 VERSION = "1.5.4"
-all: clean copy
+# assuming keymagic repo and keymagic-keyboards repo are in the same directory
+# so you need to clone keymagic-keyboards repo to run successfully
+KEYBOARDS_REPO = "../../../keymagic-keyboards/"
+ZIP_PATH="resource/others/kbLayouts.zip"
+
+all: clean build
 	pkgbuild \
 	--root $(ROOT_DIR) \
 	--install-location "/Library/Input Methods" \
@@ -23,8 +28,8 @@ all: clean copy
 	--sign $(IDENTITY_INSTALLER) \
 	keymagic-$(VERSION).pkg
 
-cp: copy #components plist
-	pkgbuild --analyze --root $(ROOT_DIR) app.plist
+cp: build #components plist
+	pkgbuild --analyze --root $(ROOT_DIR) components.plist
 
 dp: #distribution plist
 	productbuild --synthesize \
@@ -39,7 +44,18 @@ clean:
 	rm -rf $(ROOT_DIR)
 	rm -f app.pkg resources.pkg
 	
-copy:
+build:
+	xcodebuild -configuration Release -project ../IMKBased/KeyMagic.xcodeproj
 	mkdir -p $(ROOT_DIR)
-	cp -r ./KeyMagic.app $(ROOT_DIR)/
+	cp -r ../IMKBased/build/Release/KeyMagic.app $(ROOT_DIR)/
 	/usr/bin/xattr -rc $(ROOT_DIR)
+
+prepare:
+	mkdir -p resource/others
+	rm $(ZIP_PATH) || true
+	zip --junk-paths $(ZIP_PATH) \
+	"$(KEYBOARDS_REPO)/Zawgyi/Zawgyi.km2" \
+	"$(KEYBOARDS_REPO)/ZawCode/ZawCode.km2" \
+	"$(KEYBOARDS_REPO)/Pyidaungsu/Pyidaungsu MM.km2" \
+	"$(KEYBOARDS_REPO)/PaOh/PaOh.km2" \
+	"$(KEYBOARDS_REPO)/Yunghkio/Yunghkio SHAN.km2"
