--- a/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
+++ b/windows/KeyMagic2/KeyMagic2/KeyMagic2.vcxproj.filters
@@ -69,9 +69,6 @@
     <ClInclude Include="..\..\..\cross-platform\libkeymagic\RuleInfo.h">
       <Filter>Source Files\libkeymagic</Filter>
     </ClInclude>
-    <ClInclude Include="HookProc.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="KeyboardManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -118,6 +115,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AboutDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DllHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="User32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HookProc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="obfuscate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="meta_random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
