--- a/macOS/package/components.plist
+++ b/macOS/package/components.plist
@@ -12,7 +12,7 @@
 		<key>BundleOverwriteAction</key>
 		<string>upgrade</string>
 		<key>RootRelativeBundlePath</key>
-		<string>KeyMagic.app</string>
+		<string>Library/Input Methods/KeyMagic.app</string>
 	</dict>
 </array>
 </plist>
