--- a/macOS/package/distribution.plist
+++ b/macOS/package/distribution.plist
@@ -4,40 +4,7 @@
     <license file="gpl-2.0.txt" mime-type="text/plain"></license>
     <conclusion file="summary.txt" mime-type="text/plain"></conclusion>
 
-    <domains enable_anywhere="false" enable_currentUserHome="true" enable_localSystem="isNotCatalina();"></domains>
-    <installation-check script="installationCheck();"></installation-check>
-    <localization>
-        <strings language="en">
-<![CDATA[
-"SU_ERROR" = "Error";
-"SYSTEM_KEYMAGIC" = "Catalina no longer support installing in system volume and previous version of KeyMagic is found in system volume. Please run this command in Terminal: \n\nsudo rm -rf /Library/Input\\ Methods/KeyMagic.app\n\n Then run this installer again.";
-]]>
-        </strings>
-    </localization>
-    <script>
-        <![CDATA[
-        function isCatalina() {
-            return system.compareVersions(system.version.ProductVersion, '10.15') >= 0;
-        }
-        function isNotCatalina() {
-            return !isCatalina();
-        }
-        function installationCheck() {
-            if (isNotCatalina()) { return true; }
-            if (systemKeyMagicExists()) {
-                my.result.title = system.localizedString('SU_ERROR');
-                my.result.message = system.localizedString('SYSTEM_KEYMAGIC');
-                my.result.type = 'Fatal';
-                return false;
-            }
-            return true;
-        }
-        function systemKeyMagicExists() {
-            return system.files.fileExistsAtPath('/Library/Input Methods/KeyMagic.app');
-        }
-        ]]>
-    </script>
-
+    <domains enable_anywhere="false" enable_currentUserHome="true" enable_localSystem="true"></domains>
     <allowed-os-versions>
         <os-version min="10.7"></os-version>
     </allowed-os-versions>
