--- a/macOS/package/distribution.plist
+++ b/macOS/package/distribution.plist
@@ -22,7 +22,7 @@
     <choice id="org.keymagic.pkg.app" visible="false">
         <pkg-ref id="org.keymagic.pkg.app"/>
     </choice>
-    <pkg-ref id="org.keymagic.pkg.app" version="1.5.4" onConclusion="RequireLogout">app.pkg</pkg-ref>
+    <pkg-ref id="org.keymagic.pkg.app" version="__VERSION__" onConclusion="RequireLogout">app.pkg</pkg-ref>
     <pkg-ref id="org.keymagic.pkg.app">
         <must-close>
             <app id="org.keymagic.inputmethod.KeyMagic"/>
