macos Packging: Revert to using install-location again but with relative path

--- a/macOS/package/Makefile
+++ b/macOS/package/Makefile
@@ -1,8 +1,7 @@
 IDENTITY_APP = "Developer ID Application: H T KHIN ZAW (YQ4W4QMX9D)"
 IDENTITY_INSTALLER = "Developer ID Installer: H T KHIN ZAW (YQ4W4QMX9D)"
 ROOT_DIR = /tmp/KeyMagic.dst
-APP_DIR = $(ROOT_DIR)/Library/Input\ Methods/
-VERSION := $(shell defaults read $(APP_DIR)KeyMagic.app/Contents/Info.plist CFBundleVersion)
+VERSION = defaults read $(ROOT_DIR)/KeyMagic.app/Contents/Info.plist CFBundleVersion
 # assuming keymagic repo and keymagic-keyboards repo are in the same directory
 # so you need to clone keymagic-keyboards repo to run successfully
 KEYBOARDS_REPO = "../../../keymagic-keyboards/"
@@ -11,13 +10,15 @@ ZIP_PATH = "resource/others/kbLayouts.zip"
 all: clean build
 	pkgbuild \
 	--root $(ROOT_DIR) \
+	--install-location 'Library/Input Methods' \
 	--component-plist components.plist \
 	--identifier org.keymagic.pkg.app \
-	--version $(VERSION) \
+	--version $(shell $(VERSION)) \
 	app.pkg
 
 	pkgbuild \
 	--root ./resource/others \
+	--install-location 'Library/Input Methods' \
 	--identifier org.keymagic.resources \
 	--scripts ./resource/scripts \
 	resources.pkg
@@ -27,7 +28,7 @@ all: clean build
 	--resources ./ \
 	--package-path . \
 	--sign $(IDENTITY_INSTALLER) \
-	keymagic-$(VERSION).pkg
+	keymagic-$(shell $(VERSION)).pkg
 
 cp: build #components plist
 	pkgbuild --analyze --root $(ROOT_DIR) components.plist
@@ -47,11 +48,11 @@ clean:
 	
 build:
 	xcodebuild -configuration Release -project ../IMKBased/KeyMagic.xcodeproj
-	mkdir -p $(APP_DIR)
-	cp -r ../IMKBased/build/Release/KeyMagic.app $(APP_DIR)
+	mkdir -p $(ROOT_DIR)
+	cp -r ../IMKBased/build/Release/KeyMagic.app $(ROOT_DIR)/
 	/usr/bin/xattr -rc $(ROOT_DIR)
 	
-	sed -e 's/__VERSION__/$(VERSION)/' distribution.plist > distribution_.plist
+	sed -e 's/__VERSION__/$(shell $(VERSION))/' distribution.plist > distribution_.plist
 
 prepare:
 	mkdir -p resource/others
