[macos] Add notarization with apple

--- a/macOS/package/Makefile
+++ b/macOS/package/Makefile
@@ -1,5 +1,4 @@
-IDENTITY_APP = "Developer ID Application: H T KHIN ZAW (YQ4W4QMX9D)"
-IDENTITY_INSTALLER = "Developer ID Installer: H T KHIN ZAW (YQ4W4QMX9D)"
+IDENTITY_INSTALLER = "Developer ID Installer: Big IMPACT Media Company Limited (4M4NDB57J9)"
 ROOT_DIR = /tmp/KeyMagic.dst
 GET_VERSION = defaults read $(ROOT_DIR)/KeyMagic.app/Contents/Info.plist CFBundleVersion
 VERSION = $(shell $(GET_VERSION))
@@ -7,8 +6,11 @@ VERSION = $(shell $(GET_VERSION))
 # so you need to clone keymagic-keyboards repo to run successfully
 KEYBOARDS_REPO = "../../../keymagic-keyboards/"
 ZIP_PATH = "resource/others/kbLayouts.zip"
+BUILT_APP_PATH = "../IMKBased/build/Release/KeyMagic.app"
 
-all: clean build
+all: clean build pack
+
+pack:
 	pkgbuild \
 	--root $(ROOT_DIR) \
 	--install-location 'Library/Input Methods' \
@@ -40,9 +42,6 @@ dp: #distribution plist
 	--package resources.pkg \
 	distribution.plist
 
-signapp:
-	codesign --sign $(IDENTITY_APP) KeyMagic.app
-
 clean:
 	rm -rf $(ROOT_DIR)
 	rm -f app.pkg resources.pkg
@@ -50,9 +49,31 @@ clean:
 build:
 	xcodebuild -configuration Release -project ../IMKBased/KeyMagic.xcodeproj
 	mkdir -p $(ROOT_DIR)
-	cp -r ../IMKBased/build/Release/KeyMagic.app $(ROOT_DIR)/
+	cp -r $(BUILT_APP_PATH) $(ROOT_DIR)/
 	/usr/bin/xattr -rc $(ROOT_DIR)
 	sh -c "sed -e 's/__VERSION__/`$(GET_VERSION)`/' distribution.plist > distribution_.plist"
+
+notaryPkg:
+	xcrun altool --notarize-app \
+               --primary-bundle-id "org.keymagic.KeyMagic.installer" \
+               --password "@keychain:thant@bim.com.mm" \
+               --asc-provider "4M4NDB57J9" \
+               --file keymagic-$(VERSION).pkg
+
+notaryApp:
+	/usr/bin/ditto -c -k --keepParent $(BUILT_APP_PATH) /tmp/KeyMagic.zip
+	xcrun altool --notarize-app \
+               --primary-bundle-id "org.keymagic.KeyMagic.zip" \
+               --password "@keychain:thant@bim.com.mm" \
+               --asc-provider "4M4NDB57J9" \
+               --file "/tmp/KeyMagic.zip"
+
+getNotaryStatus:
+	xcrun altool --notarization-history 0 -p "@keychain:thant@bim.com.mm"
+
+checkSigs:
+	spctl -a -vv $(BUILT_APP_PATH)
+	spctl -a -vv -t install keymagic-$(VERSION).pkg
 
 prepare:
 	mkdir -p resource/others
